# cT_tradingbot

./: .gitignore  README.md  cTracker.db  main.py  mysecrets.py  pyproject.toml
