[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["Jacob Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
SQLAlchemy = "^1.4.27"
binance = "^0.3"
black = "^21.11b1"
requests = "^2.26.0"
python-binance = "^1.0.15"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
